@@ -6,30 +6,26 @@
   end
 -%>
 HOSTS:
-  ad:
+  ldapserver:
     roles:
-      - windows
-      - ad
-    platform: windows-server-amd64
-    box: devopsgroup-io/windows_server-2012r2-standard-amd64-nocm # VBOX ONLY
-    hypervisor: <%= hypervisor %>
-    vagrant_memsize: 2048
-    vagrant_cpus: 2
-    user: vagrant
-    communicator: winrm
-    is_cygwin: false
-  centos7:
-    roles:
-      - client
+      - ldap
       - default
-    platform: el-7-x86_64
-    box: centos/7
+    platform: el-8-x86_64
+    box: centos/8
     hypervisor: <%= hypervisor %>
   centos8:
     roles:
       - client
+      - sssdv2
     platform: el-8-x86_64
     box: centos/8
+    hypervisor: <%= hypervisor %>
+  centos7:
+    roles:
+      - client
+      - sssdv1
+    platform: el-7-x86_64
+    box: centos/7
     hypervisor: <%= hypervisor %>
 CONFIG:
   log_level: verbose
