@@ -28,7 +28,7 @@ HOSTS:
     roles:
       - client
     platform: el-7-x86_64
-    box: onyxpoint/oel-7-x86_64
+    box: generic/oracle7
     hypervisor: <%= hypervisor %>
 CONFIG:
   log_level: verbose
